# wisdom_hal_extender

./: .gitignore  .gitmodules  CMakeLists.txt  worm.toml
modules/: whale_cellular.h  whale_eeprom.h  whale_rtc.h
src/: whale.h  wisdom_board.h
src/modules_weak/: eeprom_weak.c
submodules/: whale_rtc.h
